@@ -1,15 +1,33 @@
+/*
+ * KNX Link - A library for KNX Net/IP communication
+ * Copyright (C) 2021 Pitschmann Christoph
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package li.pitschmann.knx.core.plugin.api.v1.controllers;
 
+import io.javalin.http.Context;
 import li.pitschmann.knx.core.communication.KnxClient;
-import li.pitschmann.knx.core.knxproj.XmlGroupAddress;
 import li.pitschmann.knx.core.knxproj.XmlGroupAddressStyle;
-import li.pitschmann.knx.core.knxproj.XmlGroupRange;
 import li.pitschmann.knx.core.plugin.api.v1.json.ProjectStructureResponse;
 import li.pitschmann.knx.core.utils.Preconditions;
-import ro.pippo.controller.GET;
-import ro.pippo.controller.Produces;
-import ro.pippo.controller.extractor.Param;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import javax.servlet.http.HttpServletResponse;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -17,6 +35,7 @@ import java.util.List;
  * from KNX Project file
  */
 public final class ProjectController extends AbstractController {
+    private static final Logger log = LoggerFactory.getLogger(ProjectController.class);
 
     public ProjectController(final KnxClient knxClient) {
         super(knxClient);
@@ -25,18 +44,17 @@ public final class ProjectController extends AbstractController {
     /**
      * Returns the project structure containing metadata from *.knxproj file
      *
-     * @return response of project structure
+     * @param ctx the Javalin context
      */
-    @GET("/project")
-    @Produces(Produces.JSON)
-    public ProjectStructureResponse projectStructure() {
+    public void projectStructure(final Context ctx) {
         log.trace("Request for project overview");
 
         final var xmlProject = getKnxClient().getConfig().getProject();
         if (xmlProject == null) {
             log.error("No project file found.");
-            getResponse().notFound();
-            return null;
+            ctx.status(HttpServletResponse.SC_NOT_FOUND);
+            ctx.result("");
+            return;
         }
 
         // get project data
@@ -48,8 +66,8 @@ public final class ProjectController extends AbstractController {
         response.setNumberOfGroupRanges(xmlProject.getGroupRanges().size());
         response.setNumberOfGroupAddresses(xmlProject.getGroupAddresses().size());
 
-        getResponse().ok();
-        return response;
+        ctx.status(HttpServletResponse.SC_OK);
+        ctx.json(response);
     }
 
     /**
@@ -58,11 +76,9 @@ public final class ProjectController extends AbstractController {
      * <p>
      * Not supported for: free-level projects
      *
-     * @return list of {@link XmlGroupRange} on root level
+     * @param ctx the Javalin context
      */
-    @GET("/project/ranges")
-    @Produces(Produces.JSON)
-    public List<XmlGroupRange> getGroupRanges() {
+    public void getGroupRanges(final Context ctx) {
         log.trace("Request for all main group ranges in project");
 
         final var xmlProject = getKnxClient().getConfig().getProject();
@@ -74,12 +90,13 @@ public final class ProjectController extends AbstractController {
             final var mainRanges = xmlProject.getMainGroupRanges();
             log.debug("All main group ranges found: {}", mainRanges);
 
-            getResponse().ok();
-            return limitAndGetAsList(mainRanges);
+            final var list = limitAndGetAsList(ctx, mainRanges);
+            ctx.status(HttpServletResponse.SC_OK);
+            ctx.json(list);
         } else {
             // not supported for free-level
-            getResponse().forbidden();
-            return List.of();
+            ctx.status(HttpServletResponse.SC_FORBIDDEN);
+            ctx.json(Collections.emptyList());
         }
     }
 
@@ -90,11 +107,10 @@ public final class ProjectController extends AbstractController {
      * </ul>
      * Not supported for: two-level and free-level projects
      *
-     * @return list of {@link XmlGroupRange} for given {@code main} range
+     * @param ctx  the Javalin context
+     * @param main the main group
      */
-    @GET("/project/ranges/{main: \\d+}")
-    @Produces(Produces.JSON)
-    public List<XmlGroupRange> getGroupRanges(@Param int main) {
+    public void getGroupRanges(final Context ctx, int main) {
         log.trace("Request for middle group ranges of main group range: {}", main);
         checkArgumentMainGroupRange(main);
 
@@ -104,12 +120,14 @@ public final class ProjectController extends AbstractController {
             final var mainRange = xmlProject.getGroupRange(main);
             log.debug("Main group range '{}' found: {}", main, mainRange);
 
-            getResponse().ok();
-            return limitAndGetAsList(mainRange.getChildGroupRanges());
+            final var list = limitAndGetAsList(ctx, mainRange.getChildGroupRanges());
+
+            ctx.status(HttpServletResponse.SC_OK);
+            ctx.json(list);
         } else {
             // not supported for free-level and two-level
-            getResponse().forbidden();
-            return List.of();
+            ctx.status(HttpServletResponse.SC_FORBIDDEN);
+            ctx.json(List.of());
         }
     }
 
@@ -118,15 +136,15 @@ public final class ProjectController extends AbstractController {
      * <p>
      * Supported for all projects: free-level, two-level and three-level
      *
-     * @return list of {@link XmlGroupAddress} for given project
+     * @param ctx the Javalin context
      */
-    @GET("/project/addresses")
-    @Produces(Produces.JSON)
-    public List<XmlGroupAddress> getGroupAddresses() {
+    public void getGroupAddresses(final Context ctx) {
         log.trace("Request all group addresses");
 
-        getResponse().ok();
-        return limitAndGetAsList(getKnxClient().getConfig().getProject().getGroupAddresses());
+        final var list = limitAndGetAsList(ctx, getKnxClient().getConfig().getProject().getGroupAddresses());
+
+        ctx.status(HttpServletResponse.SC_OK);
+        ctx.json(list);
     }
 
     /**
@@ -136,11 +154,10 @@ public final class ProjectController extends AbstractController {
      * </ul>
      * Not supported for: three-level and free-level projects
      *
-     * @return list of {@link XmlGroupAddress} for given {@code main} range
+     * @param ctx  the Javalin context
+     * @param main the main group
      */
-    @GET("/project/addresses/{main: \\d+}")
-    @Produces(Produces.JSON)
-    public List<XmlGroupAddress> getGroupAddresses(@Param int main) {
+    public void getGroupAddresses(final Context ctx, int main) {
         log.trace("Request addresses for main group range: {}", main);
         checkArgumentMainGroupRange(main);
 
@@ -149,13 +166,13 @@ public final class ProjectController extends AbstractController {
             final var middleGroup = xmlProject.getGroupRange(main);
             log.debug("Middle Group Range for main group range '{}' found: {}", main, middleGroup);
 
-            getResponse().ok();
-            return limitAndGetAsList(middleGroup.getGroupAddresses());
+            final var list = limitAndGetAsList(ctx, middleGroup.getGroupAddresses());
+            ctx.status(HttpServletResponse.SC_OK);
+            ctx.json(list);
         } else {
-            getResponse().forbidden();
-            return List.of();
+            ctx.status(HttpServletResponse.SC_FORBIDDEN);
+            ctx.json(List.of());
         }
-
     }
 
     /**
@@ -166,11 +183,11 @@ public final class ProjectController extends AbstractController {
      * </ul>
      * Not supported for: two-level and free-level projects
      *
-     * @return list of {@link XmlGroupAddress} for given {@code main} and {@code middle} ranges
+     * @param ctx    the Javalin context
+     * @param main   the main group
+     * @param middle the middle group
      */
-    @GET("/project/addresses/{main: \\d+}/{middle: \\d+}")
-    @Produces(Produces.JSON)
-    public List<XmlGroupAddress> getGroupAddresses(@Param int main, @Param int middle) {
+    public void getGroupAddresses(final Context ctx, int main, int middle) {
         log.trace("Request addresses for middle group: {}/{}", main, middle);
         checkArgumentMainGroupRange(main);
         checkArgumentMiddleGroupRange(middle);
@@ -180,13 +197,13 @@ public final class ProjectController extends AbstractController {
             final var middleGroup = xmlProject.getGroupRange(main, middle);
             log.debug("Middle Group Range for main group range '{}/{}' found: {}", main, middle, middleGroup);
 
-            getResponse().ok();
-            return limitAndGetAsList(middleGroup.getGroupAddresses());
+            final var list = limitAndGetAsList(ctx, middleGroup.getGroupAddresses());
+            ctx.status(HttpServletResponse.SC_OK);
+            ctx.json(list);
         } else {
-            getResponse().forbidden();
-            return List.of();
+            ctx.status(HttpServletResponse.SC_FORBIDDEN);
+            ctx.json(List.of());
         }
-
     }
 
     private void checkArgumentMainGroupRange(final int main) {
